--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,11 @@
 <body>
 
 <h2>The title attribute</h2>
-
+ <form  action="ConnectionManager" autocomplete="on"> 
 <p title="I'm a tooltip">
 Mouse over this paragraph, to display the title attribute as a tooltip.and testq s
 </p>
-
+ <input type="submit" value="Login" />
+</form>
 </body>
 </html>
